<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homeColor"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_login_bg" />

    <TextView
        android:id="@+id/updateAppTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:text="@string/update_pwd"
        android:textColor="@color/colorDark"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">


            <View
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:visibility="gone"
                android:background="#d8d8d8" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/updatePwdEt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/placeholder_pwd"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:textColor="@color/colorDark"
                android:textColorHint="@color/color999"
                android:textSize="14sp" />

        </LinearLayout>


        <View
            style="@style/view_line"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/newPwdEt"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/update_new_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:textColor="@color/colorDark"
                android:textColorHint="@color/color999"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            style="@style/view_line"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/pwdConfirmEt"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/update_confirm_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColor="@color/colorDark"
                android:textColorHint="@color/color999"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            style="@style/view_line"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />


        <View
            android:id="@+id/inviteLineView"
            style="@style/view_line"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="gone" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/updateBtn"
            style="@style/buttonNormal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:alpha="1"
            android:enabled="true"
            android:text="@string/update_sure"
            app:cornerRadius="@dimen/button_radian" />

    </LinearLayout>

</RelativeLayout>